--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Betel Lajes - Contato</title>
+    <title>MT VIP Segurança - Contato</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -21,17 +21,18 @@
     ======================================================= -->
 
 	<!-- SEO General -->
-	<meta name="robots" content="Localzação, follow">
-	<meta name="author" content="Betel Lajes">
-	<meta name="description" content="Lajes pre-moldada para sua construção." />
-	<meta name="application-name" content="Betel Lajes">
-	<link rel="canonical" href="https://betellajes.com.br/">
+	<meta name="robots" content="Produtos, follow">
+	<meta name="author" content="MT VIP Segurança">
+	<meta name="description" content="Segurança privada e vigilância." />
+	<meta name="application-name" content="MT VIP Segurança">
+	<link rel="canonical" href="http://www.mtvipseguranca.com.br/">
 
 	<!-- Google+ / Schema.org -->
-	<meta itemprop="name" content="Betel Lajes">
-	<meta itemprop="description" content="Lajes pre-moldada para sua construção.">
-	<meta itemprop="image" content="http://betellajes.com.br/img/Estrela-Davi-azul.png">
-	<link href="http://betellajes.com.br/" rel="publisher">		
+	<meta itemprop="name" content="MT VIP Segurança">
+	<meta itemprop="description" content="Segurança privada e vigilância.">
+	<meta itemprop="image" content="http://www.mtvipseguranca.com.br//img/Estrela-Davi-azul.png">
+	<link href="http://www.mtvipseguranca.com.br/" rel="publisher">	
+
   </head>
   <body>	
 	<header id="header">
@@ -47,7 +48,7 @@
                    <div class="navbar-brand">
 						<a href="/">
 							<img src="img/Estrela-Davi-Branca.png" alt="" width="50" height="50"  class="pull-left">						
-							<h1 class="pull-left">Betel Lajes</h1>
+							<h1 class="pull-left">MT VIP Segurança</h1>
 						</a>
 					</div>
                 </div>				
@@ -57,7 +58,7 @@
 							<li role="presentation"><a href="/">Pagina Inicial</a></li>
 							<!--<li role="presentation"><a href="about.html">Sobre nós</a></li>
 							<li role="presentation"><a href="services.html">Serviços</a></li>-->
-							<li role="presentation"><a href="gallery.html">Produtos</a></li>
+							<li role="presentation"><a href="gallery.html">Serviços</a></li>
 							<li role="presentation"><a href="contact.html" class="active">Localização</a></li>
 						</ul>
 					</div>
@@ -70,7 +71,7 @@
 	   <!--div id="google-map" data-latitude="-15.612931" data-longitude="-56.040292"></div-->		
 		
 	</div>
-	<iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=betel%20lajes&key=AIzaSyA57tZDkN44618vm6oGIn8Q1wCXlo9ZdW0" allowfullscreen></iframe>
+	<iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=mt%20vip%20seguranca&key=AIzaSyA57tZDkN44618vm6oGIn8Q1wCXlo9ZdW0" allowfullscreen></iframe>
 	<!--<section class="contact-page">
         <div class="container">
             <div class="text-center">        
@@ -84,16 +85,16 @@
 	<footer>
 		<div class="container">
 			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-				<h4>Betel Lajes</h4>
-				<p>Industria de pré-moldados.</p>
-				<div class="contact-info">
-					<ul>
-						<li><i class="fa fa-home fa"></i>Rua 21, quadra 39, lote 19, Recanto dos Pássaros - CEP: 78075-410 Cuiabá MT.</li>
-						<li><i class="fa fa-phone fa"></i> +55 65 3664 4374</li>
-						<li><i class="fa fa-envelope fa"></i> betel.ac@gmail.com</li>
-					</ul>
+					<h4 style="color: white">MT VIP Segurança</h4>
+					<p>Segurança privada e vigilância.</p>
+					<div class="contact-info">
+						<ul>
+							<li><i class="fa fa-home fa"></i>Rua 4, nº 186, quadra 57-B, Centro América - CEP: 78053-793 Cuiabá MT.</li>
+							<li><i class="fa fa-phone fa"></i> +55 65 3664-0350 / +55 65 3641-1518</li>
+							<li><i class="fa fa-envelope fa"></i> mtvip@mtvipseguranca.com.br</li>
+						</ul>
+					</div>
 				</div>
-			</div>
 			
 			<!--<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">				
 				<div class="text-center">
