--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Betel Lajes</title>
+    <title>MT VIP Segurança</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -21,17 +21,17 @@
     ======================================================= -->
 
 	<!-- SEO General -->
-	<meta name="robots" content="index, follow">
-	<meta name="author" content="Betel Lajes">
-	<meta name="description" content="Lajes pre-moldada para sua construção." />
-	<meta name="application-name" content="Betel Lajes">
-	<link rel="canonical" href="https://betellajes.com.br/">
+	<meta name="robots" content="Produtos, follow">
+	<meta name="author" content="MT VIP Segurança">
+	<meta name="description" content="Segurança privada e vigilância." />
+	<meta name="application-name" content="MT VIP Segurança">
+	<link rel="canonical" href="http://www.mtvipseguranca.com.br/">
 
 	<!-- Google+ / Schema.org -->
-	<meta itemprop="name" content="Betel Lajes">
-	<meta itemprop="description" content="Lajes pre-moldada para sua construção.">
-	<meta itemprop="image" content="http://betellajes.com.br/img/Estrela-Davi-azul.png">
-	<link href="http://betellajes.com.br/" rel="publisher">	
+	<meta itemprop="name" content="MT VIP Segurança">
+	<meta itemprop="description" content="Segurança privada e vigilância.">
+	<meta itemprop="image" content="http://www.mtvipseguranca.com.br//img/Estrela-Davi-azul.png">
+	<link href="http://www.mtvipseguranca.com.br/" rel="publisher">	
 	
   </head>
   <body>	
@@ -48,7 +48,7 @@
                    <div class="navbar-brand">
 						<a href="/">
 							<img src="img/Estrela-Davi-Branca.png" alt="" width="50" height="50"  class="pull-left">						
-							<h1 class="pull-left">Betel Lajes</h1>
+							<h1 class="pull-left">MT VIP Segurança</h1>
 						</a>
 					</div>
                 </div>				
@@ -58,7 +58,7 @@
 							<li role="presentation"><a href="/" class="active">Pagina Inicial</a></li>
 							<!--<li role="presentation"><a href="about.html">Sobre nós</a></li>
 							<li role="presentation"><a href="services.html">Serviços</a></li>-->
-							<li role="presentation"><a href="gallery.html">Produtos</a></li>
+							<li role="presentation"><a href="gallery.html">Serviços</a></li>
 							<li role="presentation"><a href="contact.html">Localização</a></li>
 						</ul>
 					</div>
@@ -79,14 +79,14 @@
 
 				<div class="carousel-inner">
 					<div class="item active">						
-						<img src="img/DSCN1224.JPG" class="img-responsive" alt=""> 
+						<img src="img/mt-vip-logo.jpeg" class="img-responsive" alt=""> 
 						<div class="carousel-caption">
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.3s">								
-								<h2><span>Lajes com treliças e isopor, mourão para cercas</span></h2>
+								<h2><span>Segurança Privada</span></h2>
 							</div>
 							<div class="col-md-10 col-md-offset-1">
 								<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.6s">								
-									<p>Ligue 3664 4374</p>
+									<p>Ligue 3664-0350 / 3641-1518</p>
 								</div>
 							</div>
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.9s">								
@@ -94,14 +94,14 @@
 						</div>
 				    </div>			
 				    <div class="item">
-						<img src="img/DSCN1207.JPG" class="img-responsive" alt=""> 
+						<img src="img/black-men.jpg" class="img-responsive" alt=""> 
 						<div class="carousel-caption">
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="1.0s">								
-								<h2>Treliças</h2>
+								<h2>Segurança Patrimonial</h2>
 							</div>
 							<div class="col-md-10 col-md-offset-1">
 								<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.6s">								
-									<p>Treliças com isopor</p>
+									<p>Patrimonio protegido</p>
 								</div>
 							</div>
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="1.6s">
@@ -109,14 +109,14 @@
 						</div>
 				    </div> 
 				    <div class="item">
-						<img src="img/products/DSCN1210.JPG" class="img-responsive" alt=""> 
+						<img src="img/body-builder.jpg" class="" alt=""> 
 						<div class="carousel-caption">
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.3s">								
-								<h2>Fabrica de treliças</h2>
+								<h2>Condominios</h2>
 							</div>
 							<div class="col-md-10 col-md-offset-1">
 								<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.6s">								
-									<p>treliças sob medida</p>
+									<p>Vigilância e segurança de condomínios</p>
 								</div>
 							</div>
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.9s">
@@ -124,14 +124,14 @@
 						</div>
 				    </div>					
 				    <div class="item">
-						<img src="img/products/laje1.jpg" class="img-responsive" alt=""> 
+						<img src="img/black-man.jpg" class="img-responsive" alt=""> 
 						<div class="carousel-caption">
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.3s">								
-								<h2>Desenho temático</h2>
+								<h2>Segurança de Eventos</h2>
 							</div>
 							<div class="col-md-10 col-md-offset-1">
 								<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.6s">								
-									<p>exemplo de montagem da laje</p>
+									<p>Seu evento sob controle</p>
 								</div>
 							</div>
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.9s">
@@ -280,13 +280,13 @@
 	<footer>
 		<div class="container">
 			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-				<h4>Betel Lajes</h4>
-				<p>Industria de pré-moldados.</p>
+				<h4 style="color: white">MT VIP Segurança</h4>
+				<p>Segurança privada e vigilância.</p>
 				<div class="contact-info">
 					<ul>
-						<li><i class="fa fa-home fa"></i>Rua 21, quadra 39, lote 19, Recanto dos Pássaros - CEP: 78075-410 Cuiabá MT.</li>
-						<li><i class="fa fa-phone fa"></i> +55 65 3664 4374</li>
-						<li><i class="fa fa-envelope fa"></i> betel.ac@gmail.com</li>
+						<li><i class="fa fa-home fa"></i>Rua 4, nº 186, quadra 57-B, Centro América - CEP: 78053-793 Cuiabá MT.</li>
+						<li><i class="fa fa-phone fa"></i> +55 65 3664-0350 / +55 65 3641-1518</li>
+						<li><i class="fa fa-envelope fa"></i> mtvip@mtvipseguranca.com.br</li>
 					</ul>
 				</div>
 			</div>
