--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Betel Lajes - Produtos</title>
+    <title>MT VIP Segurança - Produtos</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -22,16 +22,16 @@
 
 	<!-- SEO General -->
 	<meta name="robots" content="Produtos, follow">
-	<meta name="author" content="Betel Lajes">
-	<meta name="description" content="Lajes pre-moldada para sua construção." />
-	<meta name="application-name" content="Betel Lajes">
-	<link rel="canonical" href="https://betellajes.com.br/">
+	<meta name="author" content="MT VIP Segurança">
+	<meta name="description" content="Segurança privada e vigilância." />
+	<meta name="application-name" content="MT VIP Segurança">
+	<link rel="canonical" href="http://www.mtvipseguranca.com.br/">
 
 	<!-- Google+ / Schema.org -->
-	<meta itemprop="name" content="Betel Lajes">
-	<meta itemprop="description" content="Lajes pre-moldada para sua construção.">
-	<meta itemprop="image" content="http://betellajes.com.br/img/Estrela-Davi-azul.png">
-	<link href="http://betellajes.com.br/" rel="publisher">	
+	<meta itemprop="name" content="MT VIP Segurança">
+	<meta itemprop="description" content="Segurança privada e vigilância.">
+	<meta itemprop="image" content="http://www.mtvipseguranca.com.br//img/Estrela-Davi-azul.png">
+	<link href="http://www.mtvipseguranca.com.br/" rel="publisher">	
 		
   </head>
   <body>	
@@ -48,7 +48,7 @@
                    <div class="navbar-brand">
 						<a href="/">
 							<img src="img/Estrela-Davi-Branca.png" alt="" width="50" height="50"  class="pull-left">						
-							<h1 class="pull-left">Betel Lajes</h1>
+							<h1 class="pull-left">MT VIP Segurança</h1>
 						</a>
 					</div>
                 </div>				
@@ -58,7 +58,7 @@
 							<li role="presentation"><a href="/">Pagina Inicial</a></li>
 							<!--<li role="presentation"><a href="about.html">Sobre nós</a></li>
 							<li role="presentation"><a href="services.html">Serviços</a></li>-->
-							<li role="presentation"><a href="gallery.html" class="active">Produtos</a></li>
+							<li role="presentation"><a href="gallery.html" class="active">Serviços</a></li>
 							<li role="presentation"><a href="contact.html">Localização</a></li>
 						</ul>
 					</div>
@@ -69,34 +69,34 @@
 	
 	<div class="gallery">
 		<div class="text-center">
-			<h2>Produtos</h2>
-			<p>Segue abaixo mais alguns de nossos produtos</p>
+			<h2>Serviços</h2>
+			<p>Segue abaixo mais alguns de nossos serviços</p>
 		</div>
 		<div class="container">		
 			<div class="col-md-4">
 				<figure class="effect-marley">
-					<img src="img/products/DSCN1208.JPG" alt="" class="img-responsive"/>
+					<img src="img/mt-vip-logo.jpeg" alt="" class="img-responsive"/>
 					<figcaption>
-						<h4>Treliças</h4>
-						<p>Temos vários comprimentos e sob medida</p>				
+						<h4>Segurança Privada</h4>
+						<p>Ligue 3664-0350 / 3641-1518</p>				
 					</figcaption>			
 				</figure>
 			</div>
 			<div class="col-md-4">
 				<figure class="effect-marley">
-					<img src="img/products/DSCN1219.JPG" alt="" class="img-responsive"/>
+					<img src="img/black-men.jpg" alt="" class="img-responsive"/>
 					<figcaption>
-						<h4>Mourão</h4>
-						<p>Tipo reto</p>				
+						<h4>Segurança Patrimonial</h4>
+						<p>Patrimonio protegido</p>				
 					</figcaption>			
 				</figure>
 			</div>
 			<div class="col-md-4">
 				<figure class="effect-marley">
-					<img src="img/products/DSCN1220.JPG" alt="" class="img-responsive"/>
+					<img src="img/body-builder.jpg" alt="" class="img-responsive"/>
 					<figcaption>
-						<h4>Mourão</h4>
-						<p>Tipo curvo</p>				
+						<h4>Condominios</h4>
+						<p>Vigilância e segurança de condomínios</p>				
 					</figcaption>			
 				</figure>
 			</div>
@@ -105,47 +105,29 @@
 		<div class="container">
 			<div class="col-md-4">
 				<figure class="effect-marley">
-					<img src="img/products/DSCN1215.JPG" alt="" class="img-responsive"/>
+					<img src="img/black-man.jpg" alt="" class="img-responsive"/>
 					<figcaption>
-						<h4>Tijolo</h4>
-						<p>Tijolo intertravado para quintal e área de lazer.</p>				
+						<h4>Segurança de Eventos</h4>
+						<p>Seu evento sob controle.</p>				
 					</figcaption>			
 				</figure>
-			</div>
-			<div class="col-md-4">
-				<figure class="effect-marley">
-					<img src="img/products/DSCN1228.JPG" alt="" class="img-responsive"/>
-					<figcaption>
-						<h4>Isopor - EPS</h4>
-						<p>Isopor para enchimento de laje de concreto.</p>				
-					</figcaption>			
-				</figure>
-			</div>
-			<div class="col-md-4">
-				<figure class="effect-marley">
-					<img src="img/products/DSCN1234.JPG" alt="" class="img-responsive"/>
-					<figcaption>
-						<h4>Manilha</h4>
-						<p>Manilha para caixa central ou drenagem.</p>				
-					</figcaption>			
-				</figure>
-			</div>
+			</div>			
 		</div>
 	</div>	
 	
 	<footer>
 		<div class="container">
 			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-				<h4>Betel Lajes</h4>
-				<p>Industria de pré-moldados.</p>
-				<div class="contact-info">
-					<ul>
-						<li><i class="fa fa-home fa"></i>Rua 21, quadra 39, lote 19, Recanto dos Pássaros - CEP: 78075-410 Cuiabá MT.</li>
-						<li><i class="fa fa-phone fa"></i> +55 65 3664 4374</li>
-						<li><i class="fa fa-envelope fa"></i> betel.ac@gmail.com</li>
-					</ul>
+					<h4 style="color: white">MT VIP Segurança</h4>
+					<p>Segurança privada e vigilância.</p>
+					<div class="contact-info">
+						<ul>
+							<li><i class="fa fa-home fa"></i>Rua 4, nº 186, quadra 57-B, Centro América - CEP: 78053-793 Cuiabá MT.</li>
+							<li><i class="fa fa-phone fa"></i> +55 65 3664-0350 / +55 65 3641-1518</li>
+							<li><i class="fa fa-envelope fa"></i> mtvip@mtvipseguranca.com.br</li>
+						</ul>
+					</div>
 				</div>
-			</div>
 			
 			<!--<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">				
 				<div class="text-center">
