--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                    <div class="navbar-brand">
 						<a href="/">
 							<img src="img/Estrela-Davi-Branca.png" alt="" width="50" height="50"  class="pull-left">						
-							<h1 class="pull-left">MT VIP Segurança</h1>
+							<h1 class="pull-left">MT VIP Seg</h1>
 						</a>
 					</div>
                 </div>				
