--- a/gallery.html
+++ b/gallery.html
@@ -48,7 +48,7 @@
                    <div class="navbar-brand">
 						<a href="/">
 							<img src="img/Estrela-Davi-Branca.png" alt="" width="50" height="50"  class="pull-left">						
-							<h1 class="pull-left">MT VIP Seg</h1>
+							<h1 class="pull-left">MT VIP Segurança</h1>
 						</a>
 					</div>
                 </div>				
@@ -93,7 +93,7 @@
 			</div>
 			<div class="col-md-4">
 				<figure class="effect-marley">
-					<img src="img/body-builder.jpg" alt="" class="img-responsive"/>
+					<img src="img/condominio-fechado.jpg" alt="" class="img-responsive"/>
 					<figcaption>
 						<h4>Condominios</h4>
 						<p>Vigilância e segurança de condomínios</p>				
@@ -122,8 +122,10 @@
 					<p>Segurança privada e vigilância.</p>
 					<div class="contact-info">
 						<ul>
-								<li><i class="fa fa-home fa"></i>Rua 11, nº 186, quadra 57-B, Centro América - CEP: 78053-793 Cuiabá MT.</li>
-							<li><i class="fa fa-phone fa"></i> +55 65 3664-0350 / +55 65 3641-1518</li>
+							<li><i class="fa fa-home fa"></i>Rua 11, nº 186, quadra 57-B, Centro América <br/>CEP: 78053-793 Cuiabá MT.</li>
+							<br/>
+							<li><i class="fa fa-phone fa"></i> +55 65 3664-0350</li>
+							<li><i class="fa fa-phone fa"></i> +55 65 3641-1518</li>
 							<li><i class="fa fa-envelope fa"></i> mtvip@mtvipseguranca.com.br</li>
 						</ul>
 					</div>
