--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+						<span class="icon-bar"></span>						
+                    </button> 
                    <div class="navbar-brand">
 						<a href="/">
 							<img src="img/Estrela-Davi-Branca.png" alt="" width="50" height="50"  class="pull-left">						
-							<h1 class="pull-left">MT VIP Seg</h1>
+							<h1 class="pull-left">MT VIP Segurança</h1>
 						</a>
 					</div>
                 </div>				
@@ -109,7 +109,7 @@
 						</div>
 				    </div> 
 				    <div class="item">
-						<img src="img/body-builder.jpg" class="" alt=""> 
+						<img src="img/condominio-fechado.jpg" class="" alt=""> 
 						<div class="carousel-caption">
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.3s">								
 								<h2>Condominios</h2>
@@ -284,8 +284,10 @@
 				<p>Segurança privada e vigilância.</p>
 				<div class="contact-info">
 					<ul>
-							<li><i class="fa fa-home fa"></i>Rua 11, nº 186, quadra 57-B, Centro América - CEP: 78053-793 Cuiabá MT.</li>
-						<li><i class="fa fa-phone fa"></i> +55 65 3664-0350 / +55 65 3641-1518</li>
+						<li><i class="fa fa-home fa"></i>Rua 11, nº 186, quadra 57-B, Centro América <br/>CEP: 78053-793 Cuiabá MT.</li>
+						<br/>
+						<li><i class="fa fa-phone fa"></i> +55 65 3664-0350</li>
+						<li><i class="fa fa-phone fa"></i> +55 65 3641-1518</li>
 						<li><i class="fa fa-envelope fa"></i> mtvip@mtvipseguranca.com.br</li>
 					</ul>
 				</div>
